// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiButtonColorCSS base 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "t2u6im-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a11262;background-color:#FDDDE9; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(229,74,145, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(229,74,145, 0.16);
          }
        }
  
            false
          ;;label:base-accent;",
    "toString": [Function],
  },
  "accentSecondary": {
    "map": undefined,
    "name": "q87o3e-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#046e6b;background-color:#C9F3F0; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(0,176,170, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(0,176,170, 0.16);
          }
        }
  
            false
          ;;label:base-accentSecondary;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "1g7pp6a-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a71627;background-color:#FDDDD8; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(238,76,72, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(238,76,72, 0.16);
          }
        }
  
            false
          ;;label:base-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "up0w9g-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;background-color:#ECF1F9; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: undefined;
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }
  
            false
          ;;label:base-disabled;",
    "toString": [Function],
  },
  "neutral": {
    "map": undefined,
    "name": "1uzxovy-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#0f658a;background-color:#CFEEF7; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(13,161,201, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(13,161,201, 0.16);
          }
        }
  
            false
          ;;label:base-neutral;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "yk1sqq-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1750ba;background-color:#D9E8FF; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(55,136,255, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(55,136,255, 0.16);
          }
        }
  
            false
          ;;label:base-primary;",
    "toString": [Function],
  },
  "risk": {
    "map": undefined,
    "name": "gia4ur-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#9e3a16;background-color:#FFDEBF; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(252,133,68, 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(252,133,68, 0.2);
          }
        }
  
            false
          ;;label:base-risk;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "1wzbnhz-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#09724d;background-color:#C9F3E3; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(4,174,126, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(4,174,126, 0.16);
          }
        }
  
            false
          ;;label:base-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "4mvtb6-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1d2a3e;background-color:#FFFFFF; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(23,80,186, 0.08);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(23,80,186, 0.12);
          }
        }
  
            
              border: 1px solid #CAD3E2;
            
          ;;label:base-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "1h4obw6-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#825803;background-color:#FDE9B5; 
                
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(234,174,1, 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(234,174,1, 0.2);
          }
        }
  
            false
          ;;label:base-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonColorCSS empty 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "acar8m-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a11262;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(229,74,145, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(229,74,145, 0.16);
          }
        }
  ;;label:empty-accent;",
    "toString": [Function],
  },
  "accentSecondary": {
    "map": undefined,
    "name": "ci2qqz-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#046e6b;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(0,176,170, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(0,176,170, 0.16);
          }
        }
  ;;label:empty-accentSecondary;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "ttz2kz-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a71627;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(238,76,72, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(238,76,72, 0.16);
          }
        }
  ;;label:empty-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "ioqbxh-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: undefined;
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }
  ;;label:empty-disabled;",
    "toString": [Function],
  },
  "neutral": {
    "map": undefined,
    "name": "1muhyse-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#0f658a;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(13,161,201, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(13,161,201, 0.16);
          }
        }
  ;;label:empty-neutral;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "8pznf8-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1750ba;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(55,136,255, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(55,136,255, 0.16);
          }
        }
  ;;label:empty-primary;",
    "toString": [Function],
  },
  "risk": {
    "map": undefined,
    "name": "19334xv-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#9e3a16;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(252,133,68, 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(252,133,68, 0.2);
          }
        }
  ;;label:empty-risk;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "1kafuaw-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#09724d;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(4,174,126, 0.12);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(4,174,126, 0.16);
          }
        }
  ;;label:empty-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "1j2ow8l-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1d2a3e;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(23,80,186, 0.08);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(23,80,186, 0.12);
          }
        }
  ;;label:empty-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "1qptzpp-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#825803;     
    position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            content: '';
            position: absolute;
            /* should stay under the content */
            z-index: 0;
            inset: 0;
            background-color: rgba(234,174,1, 0.16);
            pointer-events: none;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(234,174,1, 0.2);
          }
        }
  ;;label:empty-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonColorCSS fill 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "g1i4pl-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#BC1E70;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #A11262;
      }

      &:active:not(:disabled) {
        background-color: #831652;
      }
  ;;label:fill-accent;",
    "toString": [Function],
  },
  "accentSecondary": {
    "map": undefined,
    "name": "b8zumr-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#008B87;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #047471;
      }

      &:active:not(:disabled) {
        background-color: #065B58;
      }
  ;;label:fill-accentSecondary;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "azzo4j-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#C61E25;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #A71627;
      }

      &:active:not(:disabled) {
        background-color: #7F1F27;
      }
  ;;label:fill-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "105tcc3-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;background-color:#ECF1F9;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: undefined;
      }

      &:active:not(:disabled) {
        background-color: undefined;
      }
  ;;label:fill-disabled;",
    "toString": [Function],
  },
  "neutral": {
    "map": undefined,
    "name": "dfjdt8-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#1C8CB5;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #0F658A;
      }

      &:active:not(:disabled) {
        background-color: #055476;
      }
  ;;label:fill-neutral;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "1kc1763-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#0B64DD;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #1750BA;
      }

      &:active:not(:disabled) {
        background-color: #154399;
      }
  ;;label:fill-primary;",
    "toString": [Function],
  },
  "risk": {
    "map": undefined,
    "name": "1c96cw4-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#ED6723;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #DB541B;
      }

      &:active:not(:disabled) {
        background-color: #C24411;
      }
  ;;label:fill-risk;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "kg8lp3-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#008A5E;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #09724D;
      }

      &:active:not(:disabled) {
        background-color: #0C5A3F;
      }
  ;;label:fill-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "9ey25n-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#5A6D8C;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #485975;
      }

      &:active:not(:disabled) {
        background-color: #384861;
      }
  ;;label:fill-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "dz0udx-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#6A4906;background-color:#FACB3D;outline-color:#07101F;    
    &:hover:not(:disabled) {
        background-color: #F5BC00;
      }

      &:active:not(:disabled) {
        background-color: #EAAE01;
      }
  ;;label:fill-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonFocusCSS 1`] = `
{
  "map": undefined,
  "name": "1w5psrn-focusCSS",
  "next": undefined,
  "styles": ";",
  "toString": [Function],
}
`;
